# FullMoon

./: Cargo.toml  README.md  flake.nix
src/: char_selector_page.rs  chat.rs  formater.rs  main.rs  message.rs  persona.rs  settings.rs  settings_page.rs
src/chat_page/: chat.rs  mod.rs
src/persona/: basic.rs  card.rs  char.rs  loader.rs  mod.rs  user.rs
src/utils/: binds.rs  mod.rs  widgets.rs
