[package]
name = "fullmoon"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
dirs = "6.0.0"
futures = "0.3.31"
iced = { version = "0.13.1", features = ["tokio", "image"] }
iced_modern_theme = "0.1.6"
llm = "1.3.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.45.1", features = ["full"] }
