[package]
name = "fullmoon"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
dirs = "6.0.0"
env_logger = "0.11.8"
futures = "0.3.31"
iced = { version = "0.13.1", features = ["tokio", "image"] }
iced_modern_theme = "0.1.6"
llm = { version = "1.3.6", features = ["logging"] }
log = "0.4.28"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.45.1", features = ["full"] }
